--- a/architecture/control-plane.adoc
+++ b/architecture/control-plane.adoc
@@ -23,6 +23,7 @@ endif::openshift-rosa[]
 // This module does not apply to OSD/ROSA
 ifndef::openshift-dedicated,openshift-rosa[]
 include::modules/architecture-machine-config-pools.adoc[leveloffset=+1]
+include::modules/architecture-machine-config-pools-custom.adoc[leveloffset=+2]
 endif::openshift-dedicated,openshift-rosa[]
 
 ifndef::openshift-dedicated,openshift-rosa[]
@@ -30,6 +31,8 @@ ifndef::openshift-dedicated,openshift-rosa[]
 .Additional resources
 * xref:../machine_configuration/index.adoc#machine-config-drift-detection_machine-config-overview[Understanding configuration drift detection]
 endif::openshift-dedicated,openshift-rosa[]
+* xref:../post_installation_configuration/machine-configuration-tasks.adoc#machine-config-drift-detection_post-install-machine-configuration-tasks[Understanding configuration drift detection].
+* xref:../nodes/nodes/nodes-nodes-creating-infrastructure-nodes.adoc#nodes-nodes-creating-infrastructure-nodes[Creating infrastructure nodes]
 
 include::modules/architecture-machine-roles.adoc[leveloffset=+1]
 
