--- a/modules/architecture-machine-config-pools-custom.adoc
+++ b/modules/architecture-machine-config-pools-custom.adoc
@@ -19,19 +19,19 @@ You cannot use a master machine config pool to create a custom pool.
 Note the following about nodes and machine config pools:
 
 * A node can only be included in one machine config pool. 
-* A node much be included in a machine config pool for the node to function properly.
-* If a node has multiple labels that correspond to several pools, such as `worker,infra`, the node is managed by the custom pool, not the worker pool. Custom pools take priority on selecting nodes to manage based on node labels. 
-* If a node has the `worker,infra` label, but you do not have an infra machine config pool, the Machine Config Operator (MCO) considers it a worker node.
-* If a node has a custom label that does not have a corresponding custom pool, the node is not recognized by the MCO and is unmanaged by the cluster.
+* A node must be included in a machine config pool for the node to function properly.
+* If a node has multiple labels that correspond to different pools, such as `worker,infra`, the node is managed by the custom pool, not the worker pool. Custom pools take priority on selecting nodes to manage based on node labels.
+* If a node has the `worker,infra` label, but you do not have an infra machine config pool, the Machine Config Operator (MCO) considers the node a worker node.
+* If a node has only a custom label that does not have a corresponding custom pool, the node is not recognized by the MCO and is unmanaged by the cluster.
 
-Because the custom pool inherits its configuration from the workers machine config pool by default, a purely custom node stills get updated when a worker machine config is updated. However, workloads scheduled for worker nodes are no longer scheduled on the custom node.
+Because the custom pool inherits its configuration from the worker machine config pool by default, a purely custom node stills get updated when a worker machine config is updated. However, workloads scheduled for worker nodes are no longer scheduled on the custom node.
 
 [NOTE]
 ====
 If a custom node reboots, the node reboots into the `worker` machine config pool. You need to reapply the custom label to that node to place the node in the custom pool. 
 ====
 
-To add a node to a custom machine config pool, you add a custom role label to the node, for example: `infra`:
+To add a node to a custom machine config pool, first add a custom role label to the node, for example: `infra`:
 
 [source,terminal]
 ----
@@ -161,5 +161,5 @@ You can see the node was removed from the custom machine config pool and returne
 NAME     CONFIG                                             UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
 custom   rendered-custom-11f6e3ee8704373add6d3c3d8399b3fa   True      False      False      0              0                   0                     0                      18m
 master   rendered-master-94cafd2f05c7cd9a3fce4877e699fa45   True      False      False      3              3                   3                     0                      125m
-worker   rendered-worker-93ac02b5fc2e2526b8b15758df3d8472   False     True       False      3              2                   2                     0                      125m
+worker   rendered-worker-93ac02b5fc2e2526b8b15758df3d8472   False     True       False      3              3                   3                     0                      125m
 ----
