--- a/modules/architecture-machine-config-pools-custom.adoc
+++ b/modules/architecture-machine-config-pools-custom.adoc
@@ -8,7 +8,7 @@
 [id="architecture-machine-config-pools-custom_{context}"]
 = Configuring a node by using custom machine config pools
 
-You can create custom machine config pools that give you the ability to deploy changes that are targeted at specific nodes. One example of this is an infrastructure node that hosts only infrastructure components, such as the router and the image registry.   
+You can create custom machine config pools that give you the ability to deploy changes that are targeted at specific nodes. One example of this is an infrastructure node that hosts only infrastructure components, such as the router or the image registry.   
 
 For information on infra nodes, see the Additional resources at the end of this section.
 
@@ -65,6 +65,8 @@ master   rendered-master-b1d4b6196a18869d63518e57b8b335d1   True      False     
 worker   rendered-worker-c48ef626ff01f0a445979a4245dc7bdd   True      False      False      3              3                   3                     0                      156m
 ----
 +
+Creating a new machine config pool also creates an associated machine configuration, listed under `CONFIG`, here `rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad`. Note that there are no nodes associated with the new machine config pool.
++
 To add a node to a custom machine config pool, first add a custom role label to the node, for example: `infra`:
 +
 [source,terminal]
@@ -84,6 +86,17 @@ ip-10-0-134-237.us-west-1.compute.internal   Ready     master         43m   v1.1
 ip-10-0-138-167.us-west-1.compute.internal   Ready     worker         37m   v1.14.0+e020ea5b3
 ip-10-0-151-146.us-west-1.compute.internal   Ready     master         43m   v1.14.0+e020ea5b3
 ip-10-0-152-59.us-west-1.compute.internal    Ready     worker         37m   v1.14.0+e020ea5b3
+----
++
+The `oc get mcp` output shows the new machine config pool:
++
+.Example output
+[source,terminal]
+----
+NAME     CONFIG                                             UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
+custom   rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    True      False      True       1              1                   1                     0                      2m
+master   rendered-master-b1d4b6196a18869d63518e57b8b335d1   True      False      False      3              3                   3                     0                      156m
+worker   rendered-worker-c48ef626ff01f0a445979a4245dc7bdd   True      False      False      2              2                   2                     0                      156m
 ----
 +
 If you want to use the node with only the custom role, remove the worker role label, for example:
