--- a/networking/ovn_kubernetes_network_provider/migrate-from-openshift-sdn.adoc
+++ b/networking/ovn_kubernetes_network_provider/migrate-from-openshift-sdn.adoc
@@ -6,7 +6,12 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-As a cluster administrator, you can migrate to the OVN-Kubernetes network plugin from the OpenShift SDN network plugin.
+As a cluster administrator, you can migrate to the OVN-Kubernetes network plugin from the OpenShift SDN network plugin using the _offline_ migration method or the limited live migration method.
+
+[WARNING]
+====
+It is not possible to upgrade a cluster to {product-title} 4.17 if it is using the OpenShift SDN network plugin. You must migrate to the OVN-Kubernetes plugin before upgrading to {product-title} 4.17.
+====
 
 To learn more about OVN-Kubernetes, read xref:../../networking/ovn_kubernetes_network_provider/about-ovn-kubernetes#about-ovn-kubernetes[About the OVN-Kubernetes network plugin].
 
@@ -15,7 +20,8 @@ To learn more about OVN-Kubernetes, read xref:../../networking/ovn_kubernetes_ne
 Do not automate the migration from OpenShift SDN to OVN-Kubernetes with a script or another tool like Red Hat Ansible Automation Platform. This might cause outages or crash your {product-title} cluster.
 ====
 
-// Migration to the OVN-Kubernetes network plugin
+// How the migration process works
+// Offline migration to the OVN-Kubernetes network plugin overview
 include::modules/nw-ovn-kubernetes-migration-about.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
@@ -24,11 +30,41 @@ include::modules/nw-ovn-kubernetes-migration-about.adoc[leveloffset=+1]
 * xref:../../updating/understanding_updates/understanding-update-channels-release.adoc#understanding-update-channels-release[Understanding update channels and releases] 
 * xref:../../release_notes/ocp-4-15-release-notes.adoc#ocp-4-15-asynchronous-errata-updates_release-notes[Asynchronous errata updates]
 
-// How the migration process works
+// How the offline migration process works
 include::modules/nw-network-plugin-migration-process.adoc[leveloffset=+2]
 
-// Migrating to the OVN-Kubernetes network plugin
-include::modules/nw-ovn-kubernetes-migration.adoc[leveloffset=+1]
+// Migrating to the OVN-Kubernetes network plugin by using the offline migration method
+include::modules/nw-ovn-kubernetes-migration.adoc[leveloffset=+2]
+
+// Limited live migration to the OVN-Kubernetes network plugin overview
+include::modules/nw-ovn-kubernetes-live-migration-about.adoc[leveloffset=+1]
+
+// How the live migration process works
+include::modules/how-the-live-migration-process-works.adoc[leveloffset=+2]
+
+// Migrating to the OVN-Kubernetes network plugin by using the limited live migration method
+include::modules/nw-ovn-kubernetes-live-migration.adoc[leveloffset=+2]
+
+// Checking cluster resources before initiating the limited live migration
+include::modules/checking-cluster-resources-before-initiating-limited-live-migration.adoc[leveloffset=+3]
+
+// Removing egress router pods before initiating the limited live migration
+include::modules/removing-egress-router-pods-before-initiating-limited-live-migration.adoc[leveloffset=+3]
+
+// Initiating the limited live migration process
+include::modules/initiating-limited-live-migration.adoc[leveloffset=+3]
+
+// Patching OVN-Kubernetes address ranges
+include::modules/patching-ovnk-address-ranges.adoc[leveloffset=+3]
+
+// Checking cluster resources after initiating the limited live migration
+include::modules/checking-cluster-resources-after-initiating-limited-live-migration.adoc[leveloffset=+3]
+
+// Checking limited live migration metrics
+include::modules/nw-ovn-kubernetes-checking-live-migration-metrics.adoc[leveloffset=+2]
+
+// Information about limited live migration metrics
+include::modules/live-migration-metrics-information.adoc[leveloffset=+3]
 
 [role="_additional-resources"]
 [id="migrate-from-openshift-sdn-additional-resources"]
@@ -37,16 +73,18 @@ include::modules/nw-ovn-kubernetes-migration.adoc[leveloffset=+1]
 * link:https://access.redhat.com/labs/ocpnc/[Red Hat OpenShift Network Calculator]
 * xref:../../networking/cluster-network-operator.adoc#nw-operator-configuration-parameters-for-ovn-sdn_cluster-network-operator[Configuration parameters for the OVN-Kubernetes network plugin]
 * xref:../../backup_and_restore/control_plane_backup_and_restore/backing-up-etcd.adoc#backup-etcd[Backing up etcd]
-* xref:../../networking/network_policy/about-network-policy.adoc#about-network-policy[About network policy]
+* xref:../../networking/network_security/network_policy/about-network-policy.adoc#about-network-policy[About network policy]
 * xref:../../networking/changing-cluster-network-mtu.adoc#nw-cluster-mtu-change_changing-cluster-network-mtu[Changing the cluster MTU]
 * xref:../../networking/changing-cluster-network-mtu.adoc#mtu-value-selection_changing-cluster-network-mtu[MTU value selection]
+* xref:../../networking/network_security/network_policy/about-network-policy.adoc#nw-networkpolicy-optimize-ovn_about-network-policy[About network policy]
 * OVN-Kubernetes capabilities
 - xref:../../networking/ovn_kubernetes_network_provider/configuring-egress-ips-ovn.adoc#configuring-egress-ips-ovn[Configuring an egress IP address]
-- xref:../../networking/ovn_kubernetes_network_provider/configuring-egress-firewall-ovn.adoc#configuring-egress-firewall-ovn[Configuring an egress firewall for a project]
+- xref:../../networking/network_security/egress_firewall/configuring-egress-firewall-ovn.adoc#configuring-egress-firewall-ovn[Configuring an egress firewall for a project]
 - link:https://access.redhat.com/solutions/7078619[OVN-Kubernetes egress firewall blocks process to deploy application as DeploymentConfig]
 - xref:../../networking/ovn_kubernetes_network_provider/enabling-multicast.adoc#nw-ovn-kubernetes-enabling-multicast[Enabling multicast for a project]
 * OpenShift SDN capabilities
 - xref:../../networking/openshift_sdn/assigning-egress-ips.adoc#assigning-egress-ips[Configuring egress IPs for a project]
 - xref:../../networking/openshift_sdn/configuring-egress-firewall.adoc#configuring-egress-firewall[Configuring an egress firewall for a project]
 - xref:../../networking/openshift_sdn/enabling-multicast.adoc#enabling-multicast[Enabling multicast for a project]
+- xref:../../networking/openshift_sdn/deploying-egress-router-layer3-redirection.adoc#deploying-egress-router-layer3-redirection[Deploying an egress router pod in redirect mode]
 * xref:../../rest_api/operator_apis/network-operator-openshift-io-v1.adoc#network-operator-openshift-io-v1[Network [operator.openshift.io/v1]]
