Xref link (Squash)

--- a/service_mesh/v2x/ossm-migration-guides.adoc
+++ b/service_mesh/v2x/ossm-migration-guides.adoc
@@ -10,7 +10,7 @@ toc::[]
 
 In preparation for the release of {SMProductName} version 3.0, you need to migrate from the {JaegerName} to the {OTELName}, which is based on the OpenTelemetry open-source project.
 
-To migrate, follow the {OTELName} migration steps: xref:../../../observability/otel/otel-migrating.html[Migrating]
+To migrate, follow the {OTELName} migration steps: xref:../../observability/otel/otel-migrating.html[Migrating]
 
 
 //REMOVE when OSSM 3.0 is being release. Creating this new assembly for migration guides for 2.6. This will help Service Mesh users get accustomed to seeing it in preparation for additional content to be added to help users migrating from OSSM 2.6 to OSSM 2.0. It is also the most logical way to present/link to migration content from Distributed Tracing and other areas of OCP so that it doesn't get lost. The intent of these guides is for users to be able to more easily move from OSSM 2.6 to OSSm 3.0.
