Style header and first pass at intro (squash)

--- a/service_mesh/v2x/ossm-migration-guides.adoc
+++ b/service_mesh/v2x/ossm-migration-guides.adoc
@@ -6,7 +6,13 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-.Migrating from Jaeger to OpenTelemetry
+//going to need an intro, which is tricky to write at the moment since 3.0 will not GA until Q4 2024 but users need to know what to expect. Some kind of summary of what these guides will be will need to go here.
+
+//In preparation for the release of {SMProductName} version 3.0, you need to migrate of some services and onto others, such as moving from Jaeger to OTEL+Tempo. The content included in these guides will help you do that. OSSM 3.0 is a re-imagining of OpenShift Service Mesh, and its installation.
+
+Before you will be able to move to Service Mesh 3.0, you will need to perform a series of migrations. The first is moving from {JaegerName} to {OTELName}.
+
+== Migrating from Jaeger to OpenTelemetry
 
 In preparation for the release of {SMProductName} version 3.0, you need to migrate from the {JaegerName} to the {OTELName}, which is based on the OpenTelemetry open-source project.
 
