POC: Created the general structure for Terraform tutorials

--- a/modules/rosa-classic-cluster-terraform-file-creation.adoc
+++ b/modules/rosa-classic-cluster-terraform-file-creation.adoc
@@ -1,9 +1,7 @@
 // Module included in the following assemblies:
 //
 // * rosa_install_access_delete_clusters/rosa-classic-creating-a-cluster-quickly-terraform.adoc
-
 :_content-type: PROCEDURE
-
 [id="rosa-classic-cluster-terraform-file-creation_{context}"]
 = Creating your Terraform files locally
 
@@ -82,17 +80,11 @@ locals {
 resource "time_sleep" "wait_60_seconds" {
   count = var.create_vpc ? 1 : 0
   depends_on = [module.vpc]
-  create_duration = "60s"
 }
 
 module "rosa-classic" {
   source                 = "terraform-redhat/rosa-classic/rhcs"
   version                = "1.5.0"
-  cluster_name           = local.cluster_name
-  openshift_version      = var.openshift_version
-  account_role_prefix    = local.cluster_name
-  operator_role_prefix   = local.cluster_name
-  replicas               = local.worker_node_replicas
   aws_availability_zones = local.region_azs
   create_oidc            = true
   private                = var.private_cluster
@@ -130,7 +122,6 @@ Copy and edit this file _before_ running the command to build your cluster.
 +
 [source,terminal]
 ----
-$ cat<<-EOF>variables.tf
 #
 # Copyright (c) 2023 Red Hat, Inc.
 #
@@ -200,6 +191,7 @@ variable "aws_subnet_ids" {
 variable "private_cluster" {
   type        = bool
   description = "If you want to create a private cluster, set this value to 'true'. If you want a publicly available cluster, set this value to 'false'."
+  default     = "false"
 }
 
 #VPC Info
@@ -247,7 +239,7 @@ variable "default_aws_tags" {
 EOF
 ----
 
-. Create the `vpc.tf` file by running the following command:
+. Create the vpc.tf file by running the following command:
 +
 [source,terminal]
 ----
