--- a/modules/rosa-hcp-cluster-terraform-file-creation.adoc
+++ b/modules/rosa-hcp-cluster-terraform-file-creation.adoc
@@ -79,15 +79,10 @@ locals {
 # The network validator requires an additional 60 seconds to validate Terraform clusters.
 resource "time_sleep" "wait_60_seconds" {
   count = var.create_vpc ? 1 : 0
-  depends_on = [module.vpc]
-  create_duration = "60s"
-}
-
 module "rosa-hcp" {
   source                 = "terraform-redhat/rosa-hcp/rhcs"
   version                = "1.6.3"
   cluster_name           = local.cluster_name
-  openshift_version      = var.openshift_version
   account_role_prefix    = local.cluster_name
   operator_role_prefix   = local.cluster_name
   replicas               = local.worker_node_replicas
@@ -190,6 +185,7 @@ variable "aws_subnet_ids" {
 variable "private_cluster" {
   type        = bool
   description = "If you want to create a private cluster, set this value to 'true'. If you want a publicly available cluster, set this value to 'false'."
+  default     = false
 }
 
 #VPC Info
