--- a/modules/rosa-sts-cluster-terraform-destroy.adoc
+++ b/modules/rosa-sts-cluster-terraform-destroy.adoc
@@ -1,15 +1,14 @@
 // Module included in the following assemblies:
 //
-// * rosa_install_access_delete_clusters/rosa-classic-creating-a-cluster-quickly-terraform.adoc
-//
+// * rosa_hcp/terraform/rosa-hcp-creating-a-cluster-quickly-terraform.adoc
+// * rosa_install_access_delete_clusters/terraform/rosa-classic-creating-a-cluster-quickly-terraform.adoc
 ifeval::["{context}" == "rosa-classic-creating-a-cluster-quickly-terraform"]
-:tf-defaults:
+:tf-rosa-classic:
 endif::[]
 ifeval::["{context}" == "rosa-hcp-creating-a-cluster-quickly-terraform"]
 :tf-rosa-hcp:
 endif::[]
 :_content-type: PROCEDURE
-
 [id="sd-terraform-cluster-destroy_{context}"]
 = Deleting your ROSA cluster with Terraform
 
@@ -115,8 +114,8 @@ I: Fetching operator roles
 I: No operator roles available
 ----
 ifeval::["{context}" == "rosa-classic-creating-a-cluster-quickly-terraform"]
-:tf-defaults:
+:!tf-rosa-classic:
 endif::[]
 ifeval::["{context}" == "rosa-hcp-creating-a-cluster-quickly-terraform"]
-:tf-rosa-hcp:
+:!tf-rosa-hcp:
 endif::[]
