--- a/modules/rosa-sts-cluster-terraform-execute.adoc
+++ b/modules/rosa-sts-cluster-terraform-execute.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
 //
-// * rosa_install_access_delete_clusters/rosa-classic-creating-a-cluster-quickly-terraform.adoc
-//
+// * rosa_hcp/terraform/rosa-hcp-creating-a-cluster-quickly-terraform.adoc
+// * rosa_install_access_delete_clusters/terraform/rosa-classic-creating-a-cluster-quickly-terraform.adoc
 ifeval::["{context}" == "rosa-classic-creating-a-cluster-quickly-terraform"]
 :tf-rosa-classic:
 endif::[]
@@ -47,18 +47,13 @@ Success! The configuration is valid.
 $ terraform apply
 ----
 +
-The Terraform interface asks two questions to create your cluster, similiar to the following:
+The Terraform interface asks a question to create your cluster, similiar to the following:
 +
 .Example output
 [source,terminal]
 ----
 var.create_vpc
   If you would like to create a new VPC, set this value to 'true'. If you do not want to create a new VPC, set this value to 'false'.
-
-  Enter a value: 
-
-var.private_cluster
-  If you want to create a private cluster, set this value to 'true'. If you want a publicly available cluster, set this value to 'false'.
 
   Enter a value: 
 ----
@@ -69,7 +64,7 @@ ifdef::tf-rosa-hcp[]
 .Example output
 [source,terminal]
 ----
-Plan: 63 to add, 0 to change, 0 to destroy.
+Plan: 64 to add, 0 to change, 0 to destroy.
 
 Do you want to perform these actions?
   Terraform will perform the actions described above.
@@ -80,7 +75,7 @@ ifdef::tf-rosa-classic[]
 .Example output
 [source,terminal]
 ----
-Plan: 74 to add, 0 to change, 0 to destroy.
+Plan: 75 to add, 0 to change, 0 to destroy.
 
 Do you want to perform these actions?
   Terraform will perform the actions described above.
