--- a/rosa_install_access_delete_clusters/terraform/rosa-classic-creating-a-cluster-quickly-terraform.adoc
+++ b/rosa_install_access_delete_clusters/terraform/rosa-classic-creating-a-cluster-quickly-terraform.adoc
@@ -1,6 +1,6 @@
 :_content-type: ASSEMBLY
 [id="rosa-classic-creating-a-cluster-quickly-terraform"]
-= Creating a default ROSA (classic architecture) cluster using Terraform
+= Creating a default {rosa-classic} cluster using Terraform
 include::_attributes/attributes-openshift-dedicated.adoc[]
 :context: rosa-classic-creating-a-cluster-quickly-terraform
 
@@ -16,9 +16,12 @@ The cluster creation process described below uses a Terraform configuration that
 * All other AWS resources required to create a ROSA with STS cluster
 
 include::modules/rosa-terraform-overview.adoc[leveloffset=+1]
+
 include::modules/rosa-sts-terraform-prerequisites.adoc[leveloffset=+1]
+
 [discrete]
 include::modules/rosa-sts-terraform-considerations.adoc[leveloffset=+1]
+
 include::modules/rosa-sts-overview-of-the-default-cluster-specifications.adoc[leveloffset=+1]
 
 [id="rosa-classic-creating-a-cluster-quickly-terraform-procedure"]
@@ -27,8 +30,11 @@ include::modules/rosa-sts-overview-of-the-default-cluster-specifications.adoc[le
 The cluster creation process outlined below shows how to use Terraform to create your account-wide IAM roles and a {rosa-classic} cluster with a managed OIDC configuration.
 
 include::modules/rosa-sts-cluster-terraform-setup.adoc[leveloffset=+2]
+
 include::modules/rosa-classic-cluster-terraform-file-creation.adoc[leveloffset=+2]
+
 include::modules/rosa-sts-cluster-terraform-execute.adoc[leveloffset=+2]
+
 include::modules/rosa-sts-cluster-terraform-destroy.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
