--- a/architecture/control-plane.adoc
+++ b/architecture/control-plane.adoc
@@ -24,15 +24,18 @@ endif::openshift-rosa[]
 ifndef::openshift-dedicated,openshift-rosa[]
 include::modules/architecture-machine-config-pools.adoc[leveloffset=+1]
 include::modules/architecture-machine-config-pools-custom.adoc[leveloffset=+2]
+
+[role="_additional-resources"]
+.Additional resources
 endif::openshift-dedicated,openshift-rosa[]
 
 ifndef::openshift-dedicated,openshift-rosa[]
 [role="_additional-resources"]
 .Additional resources
+* xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[Using custom machine config pools to configure nodes]
 * xref:../machine_configuration/index.adoc#machine-config-drift-detection_machine-config-overview[Understanding configuration drift detection]
-endif::openshift-dedicated,openshift-rosa[]
-* xref:../post_installation_configuration/machine-configuration-tasks.adoc#machine-config-drift-detection_post-install-machine-configuration-tasks[Understanding configuration drift detection].
 * xref:../nodes/nodes/nodes-nodes-creating-infrastructure-nodes.adoc#nodes-nodes-creating-infrastructure-nodes[Creating infrastructure nodes]
+endif::openshift-dedicated,openshift-rosa[]
 
 include::modules/architecture-machine-roles.adoc[leveloffset=+1]
 
