--- a/machine_configuration/machine-configs-configure.adoc
+++ b/machine_configuration/machine-configs-configure.adoc
@@ -1,7 +1,7 @@
 :_mod-docs-content-type: ASSEMBLY
 :context: machine-configs-configure
 [id="machine-configs-configure"]
-= Using machine config objects to configure nodes
+= About using machine config objects to configure nodes
 include::_attributes/common-attributes.adoc[]
 
 toc::[]
