--- a/modules/machine-config-pools-custom-configure.adoc
+++ b/modules/machine-config-pools-custom-configure.adoc
@@ -1,94 +1,230 @@
+
 // Module included in the following assemblies:
 //
 // * machine_configuration/machine-config-pool-custom.adoc
 
 :_content-type: PROCEDURE
 [id="machine-config-pools-custom-configure_{context}"]
-= Creating the custom machine config pool
+= Creating a custom machine config pool
 
-Create a `MachineConfigPool` object that contains a custom role as the `machineConfigSelector`. 
+To create a custom machine config pool, you create a `MachineConfigPool` object that contains a custom role as the `machineConfigSelector`. 
 
-The following example creates a custom machine config pool named `infra` that is also associated with the `worker` machine config pool: 
+The following procedure creates a custom machine config pool named `infra` that is also associated with the `worker` machine config pool. 
 
+.Procedure 
+
+. Create a YAML file that defines your custom machine config pool:
++
 [source,yaml]
 ----
 apiVersion: machineconfiguration.openshift.io/v1
 kind: MachineConfigPool
 metadata:
-  name: infra
+  name: infra <1>
 spec:
   machineConfigSelector:
     matchExpressions:
-      - {key: machineconfiguration.openshift.io/role, operator: In, values: [worker,infra]} <1>
+      - {key: machineconfiguration.openshift.io/role, operator: In, values: [worker,infra]} <2>
   nodeSelector:
     matchLabels:
       node-role.kubernetes.io/infra: ""
 ----
-<1> You must include `worker` as a value, even if you remove the `worker` label from your custom node.
+<1> Specifies a descriptive name for the MCP.
+<2> Specifies a label for the custom MCP. You must also include `worker` label as a value, even if you remove the `worker` label from your custom node.
 
-The `oc get mcp` output shows the new machine config pool:
+. Create the CR  by running the following command:
++
+[source,terminal]
+----
+$ oc create -f <file_name>.yaml
+----
 
+. View the new machine config pool by using the following command:
++
+[source,terminal]
+----
+$ oc get mcp
+----
++
 .Example output
 [source,terminal]
 ----
 NAME     CONFIG                                             UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
-custom   rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    True      False      True       0              0                   0                     0                      15s
+infra    rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    True      False      True       0              0                   0                     0                      15s <1>
 master   rendered-master-b1d4b6196a18869d63518e57b8b335d1   True      False      False      3              3                   3                     0                      156m
 worker   rendered-worker-c48ef626ff01f0a445979a4245dc7bdd   True      False      False      3              3                   3                     0                      156m
 ----
-
+<1> This is custom machine config pool.
++
 Creating a new machine config pool also creates an associated machine configuration, listed under `CONFIG`, here `rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad`. Note that there are no nodes associated with the new machine config pool.
 
-To add a node to a custom machine config pool, first add a custom role label to the node, for example: `infra`:
-
+. View the new machine config by using the following command:
++
 [source,terminal]
 ----
-$ oc label node ip-10-0-130-218.us-west-1.compute.internal node-role.kubernetes.io/infra=
+$ oc get mc
 ----
++
+.Example output
+[source,terminal]
+----
+NAME                                               GENERATEDBYCONTROLLER                      IGNITIONVERSION   AGE
+00-master                                          40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             157m
+00-worker                                          40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             157m
+# ...
+rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             73s <1>
+# ...
+----
+<1> This is custom machine config pool.
 
-The `oc get nodes` output shows that node with the `worker` and custom roles.
+. Add a node to a custom machine config pool: 
 
+.. Add a custom role label to the node by using the following command
++
+[source,terminal]
+----
+$ oc label node ip-10-0-130-218.us-west-1.compute.internal node-role.kubernetes.io/infra= <1>
+----
+<1> This command add an `infra` label to the node, which adds the node to the `infra` custom machine config pool.
+
+. View the new machine config pool by using the following command:
++
+[source,terminal]
+----
+$ oc get mcp
+----
++
+.Example output
+[source,terminal]
+----
+NAME     CONFIG                                             UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
+infra    rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    True      False      True       1              1                   1                     0                      2m <1>
+master   rendered-master-b1d4b6196a18869d63518e57b8b335d1   True      False      False      3              3                   3                     0                      156m
+worker   rendered-worker-c48ef626ff01f0a445979a4245dc7bdd   True      False      False      2              2                   2                     0                      156m
+----
+<1> The `infra` custom machine config pool now reports having one node, which you just added. 
+
+. View the new machine config by using the following command:
++
+[source,terminal]
+----
+$ oc get nodes
+----
++
 .Example output
 [source,terminal]
 ----
 NAME                                         STATUS    ROLES          AGE   VERSION
-ip-10-0-130-218.us-west-1.compute.internal   Ready     infra,worker   37m   v1.14.0+e020ea5b3
-ip-10-0-131-9.us-west-1.compute.internal     Ready     master         43m   v1.14.0+e020ea5b3
-ip-10-0-134-237.us-west-1.compute.internal   Ready     master         43m   v1.14.0+e020ea5b3
-ip-10-0-138-167.us-west-1.compute.internal   Ready     worker         37m   v1.14.0+e020ea5b3
-ip-10-0-151-146.us-west-1.compute.internal   Ready     master         43m   v1.14.0+e020ea5b3
-ip-10-0-152-59.us-west-1.compute.internal    Ready     worker         37m   v1.14.0+e020ea5b3
+ip-10-0-130-218.us-west-1.compute.internal   Ready     infra,worker   37m   v1.30.2 <1>
+ip-10-0-131-9.us-west-1.compute.internal     Ready     master         43m   v1.30.2
+ip-10-0-134-237.us-west-1.compute.internal   Ready     master         43m   v1.30.2
+ip-10-0-138-167.us-west-1.compute.internal   Ready     worker         37m   v1.30.2
+ip-10-0-151-146.us-west-1.compute.internal   Ready     master         43m   v1.30.2
+ip-10-0-152-59.us-west-1.compute.internal    Ready     worker         37m   v1.30.2
 ----
+<1> The node is added to the `infra` custom machine config pool.
 
-The `oc get mcp` output shows the new machine config pool:
-
-.Example output
-[source,terminal]
-----
-NAME     CONFIG                                             UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
-custom   rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    True      False      True       1              1                   1                     0                      2m
-master   rendered-master-b1d4b6196a18869d63518e57b8b335d1   True      False      False      3              3                   3                     0                      156m
-worker   rendered-worker-c48ef626ff01f0a445979a4245dc7bdd   True      False      False      2              2                   2                     0                      156m
-----
-
-If you want to use the node with only the custom role, remove the worker role label, for example:
+. Optional: To use the node with only the custom role, remove the `worker` role label, for example:
 
 [source,terminal]
 ----
 $ oc label node ip-10-0-130-218.us-west-1.compute.internal node-role.kubernetes.io/worker-
 ----
 
-The `oc get nodes` output shows that node with only the custom role.
 
+. View the new machine config by using the following command:
++
+[source,terminal]
+----
+$ oc get nodes
+----
++
 .Example output
 [source,terminal]
 ----
 NAME                                         STATUS    ROLES          AGE   VERSION
-ip-10-0-130-218.us-west-1.compute.internal   Ready     infra          38m   v1.14.0+e020ea5b3
-ip-10-0-131-9.us-west-1.compute.internal     Ready     master         44m   v1.14.0+e020ea5b3
-ip-10-0-134-237.us-west-1.compute.internal   Ready     master         44m   v1.14.0+e020ea5b3
-ip-10-0-138-167.us-west-1.compute.internal   Ready     worker         34m   v1.14.0+e020ea5b3
-ip-10-0-151-146.us-west-1.compute.internal   Ready     master         44m   v1.14.0+e020ea5b3
-ip-10-0-152-59.us-west-1.compute.internal    Ready     worker         34m   v1.14.0+e020ea5b3
+ip-10-0-130-218.us-west-1.compute.internal   Ready     infra          38m   v1.30.2 <1>
+ip-10-0-131-9.us-west-1.compute.internal     Ready     master         44m   v1.30.2
+ip-10-0-134-237.us-west-1.compute.internal   Ready     master         44m   v1.30.2
+ip-10-0-138-167.us-west-1.compute.internal   Ready     worker         34m   v1.30.2
+ip-10-0-151-146.us-west-1.compute.internal   Ready     master         44m   v1.30.2
+ip-10-0-152-59.us-west-1.compute.internal    Ready     worker         34m   v1.30.2
+----
+<1> The is only in the `infra` machine config pool.
+
+. Make a change for infra nodes using a `MachineConfig` object, such as disabling `chronyd`.
+
+.. Create the `MachineConfig` CR that disables `chronyd` for the specified node role.
++
+[source,yaml]
+----
+apiVersion: machineconfiguration.openshift.io/v1
+kind: MachineConfig
+metadata:
+  labels:
+    machineconfiguration.openshift.io/role: <node_role> <1>
+  name: disable-chronyd
+spec:
+  config:
+    ignition:
+      version: 3.2.0
+    systemd:
+      units:
+        - contents: |
+            [Unit]
+            Description=NTP client/server
+            Documentation=man:chronyd(8) man:chrony.conf(5)
+            After=ntpdate.service sntp.service ntpd.service
+            Conflicts=ntpd.service systemd-timesyncd.service
+            ConditionCapability=CAP_SYS_TIME
+            [Service]
+            Type=forking
+            PIDFile=/run/chrony/chronyd.pid
+            EnvironmentFile=-/etc/sysconfig/chronyd
+            ExecStart=/usr/sbin/chronyd $OPTIONS
+            ExecStartPost=/usr/libexec/chrony-helper update-daemon
+            PrivateTmp=yes
+            ProtectHome=yes
+            ProtectSystem=full
+            [Install]
+            WantedBy=multi-user.target
+          enabled: false
+          name: "chronyd.service"
+----
+<1> Node role where you want to disable `chronyd`, for example, `master`.
+
+.. Create the `MachineConfig` CR by running the following command:
++
+[source,terminal]
+----
+$ oc create -f disable-chronyd.yaml
 ----
 
+New MC
+oc get mc
+NAME                                               GENERATEDBYCONTROLLER                      IGNITIONVERSION   AGE
+00-master                                          40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             3h7m
+00-worker                                          40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             3h7m
+# ...
+disable-chronyd                                                                               3.2.0             4s
+rendered-infra-5a2263cade4e31716d2706b53c21cd7b    40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             31m
+
+Infra MCP updating
+
+mburke@mburke ~ $ oc get mcp
+NAME     CONFIG                                             UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
+infra    rendered-infra-5a2263cade4e31716d2706b53c21cd7b    False     True       False      1              0                   0                     0                      31m
+master   rendered-master-e06e76bec4076c44f0325ed333db52d0   True      False      False      3              3                   3                     0                      3h8m
+worker   rendered-worker-5a2263cade4e31716d2706b53c21cd7b   True      False      False      2              2                   2                     0                      3h8m
+
+
+Infra node updating
+
+ $ oc get nodes
+NAME                                       STATUS                        ROLES                  AGE     VERSION
+ci-ln-y798m0t-72292-6vr7l-master-0         Ready                         control-plane,master   3h14m   v1.30.2
+ci-ln-y798m0t-72292-6vr7l-master-1         Ready                         control-plane,master   3h13m   v1.30.2
+ci-ln-y798m0t-72292-6vr7l-master-2         Ready                         control-plane,master   3h13m   v1.30.2
+ci-ln-y798m0t-72292-6vr7l-worker-a-cp5qm   NotReady,SchedulingDisabled   infra                  3h2m    v1.30.2
+ci-ln-y798m0t-72292-6vr7l-worker-b-8h5gh   Ready                         worker                 3h2m    v1.30.2
+ci-ln-y798m0t-72292-6vr7l-worker-c-rn7s5   Ready                         worker                 3h2m    v1.30.2
