--- a/architecture/control-plane.adoc
+++ b/architecture/control-plane.adoc
@@ -35,6 +35,7 @@ ifndef::openshift-dedicated,openshift-rosa[]
 * xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[Using custom machine config pools to configure nodes]
 * xref:../machine_configuration/index.adoc#machine-config-drift-detection_machine-config-overview[Understanding configuration drift detection]
 * xref:../nodes/nodes/nodes-nodes-creating-infrastructure-nodes.adoc#nodes-nodes-creating-infrastructure-nodes[Creating infrastructure nodes]
+* xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[About using custom machine config pools to configure nodes]
 endif::openshift-dedicated,openshift-rosa[]
 
 include::modules/architecture-machine-roles.adoc[leveloffset=+1]
