--- a/machine_configuration/index.adoc
+++ b/machine_configuration/index.adoc
@@ -12,8 +12,6 @@ There are times when you need to make changes to the operating systems running o
 
 Aside from a few specialized features, most changes to operating systems on {product-title} nodes can be done by creating what are referred to as `MachineConfig` objects that are managed by the Machine Config Operator. For example, you can use the Machine Config Operator (MCO) and machine configs to manage update to systemd, CRI-O and kubelet, the kernel, Network Manager and other system features.
 
-Tasks in this section describe how to use features of the Machine Config Operator to configure operating system features on {product-title} nodes.
-
 [IMPORTANT]
 ====
 NetworkManager stores new network configurations to `/etc/NetworkManager/system-connections/` in a key file format.
@@ -30,6 +28,11 @@ include::modules/understanding-machine-config-operator.adoc[leveloffset=+1]
 
 include::modules/machine-config-overview.adoc[leveloffset=+1]
 include::modules/architecture-machine-config-pools.adoc[leveloffset=+2]
+
+[role="_additional-resources"]
+.Additional resources
+
+* xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[About using custom machine config pools to configure nodes]
 
 include::modules/machine-config-node-drain.adoc[leveloffset=+1]
 
