--- a/machine_configuration/machine-config-pool-custom.adoc
+++ b/machine_configuration/machine-config-pool-custom.adoc
@@ -1,5 +1,5 @@
 :_mod-docs-content-type: ASSEMBLY
-:context: machine-configs-configure
+:context: machine-configs-custom
 [id="machine-config-pool-custom"]
 = About using custom machine config pools to configure nodes
 include::_attributes/common-attributes.adoc[]
@@ -8,7 +8,7 @@ toc::[]
 
 
 
-By default, there are two machine config pools (MCP) created by the cluster when it is installed: `master` and `worker`.  Each MCP manages a set of nodes and apply changes to the corresponding machine configs. 
+By default, there are two machine config pools (MCP) created by the cluster when it is installed: `master` and `worker`.  Each MCP manages a set of nodes and applies changes made through a machine config to the appropriate nodes. 
 
 However, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
 
