--- a/machine_configuration/machine-configs-configure.adoc
+++ b/machine_configuration/machine-configs-configure.adoc
@@ -1,12 +1,14 @@
 :_mod-docs-content-type: ASSEMBLY
 :context: machine-configs-configure
 [id="machine-configs-configure"]
-= About using machine config objects to configure nodes
+= Using machine config objects to configure nodes
 include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
 You can use the tasks in this section to create `MachineConfig` objects that modify files, systemd unit files, and other operating system features running on {product-title} nodes. For more ideas on working with machine configs, see content related to link:https://access.redhat.com/solutions/3868301[updating] SSH authorized keys, xref:../security/container_security/security-container-signature.adoc#security-container-signature[verifying image signatures], link:https://access.redhat.com/solutions/4727321[enabling SCTP], and link:https://access.redhat.com/solutions/5170251[configuring iSCSI initiatornames] for {product-title}.
+
+You can create a machine config that applies changes to all control plane or all worker nodes, or you can use xref:../machine_configuration/machine-config-about.html#machine-config-pool-custom_machine-configs-custom[custom machine config pools] that apply changes to a specific set of worker nodes.
 
 {product-title} supports link:https://coreos.github.io/ignition/configuration-v3_2/[Ignition specification version 3.2]. All new machine configs you create going forward should be based on Ignition specification version 3.2. If you are upgrading your {product-title} cluster, any existing Ignition specification version 2.x machine configs will be translated automatically to specification version 3.2.
 
