--- a/modules/create-a-kubeletconfig-crd-to-edit-kubelet-parameters.adoc
+++ b/modules/create-a-kubeletconfig-crd-to-edit-kubelet-parameters.adoc
@@ -140,7 +140,7 @@ For example:
 $ oc describe node ci-ln-5grqprb-f76d1-ncnqq-worker-a-mdv94
 ----
 +
-Look for `value: pods: <value>` in the `Allocatable` stanza:
+Look for `pods: <value>` in the `Allocatable` stanza:
 +
 .Example output
 [source,terminal]
