OCP 4.17 Release Notes for P/Z

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -85,6 +85,18 @@ xref:../installing/installing_ibm_z/preparing-to-install-on-ibm-z.adoc#preparing
 Compute nodes must run {op-system-first}.
 ====
 
+[discrete]
+[id="ocp-4-17-ibm-z-enhancements_{context}"]
+==== {ibm-z-title} and {ibm-linuxone-title} notable enhancements
+
+The {ibm-z-name} and {ibm-linuxone-name} release on {product-title} {product-version} adds improvements and new capabilities to {product-title} components and concepts.
+
+This release introduces support for the following features on {ibm-z-name} and {ibm-linuxone-name}:
+
+* CPU manager
+* Non-volatile memory express (NVMe) support for LPAR
+* Tuning etcd latency tolerances
+
 [id="ocp-4-17-ibm-power_{context}"]
 === {ibm-power-title}
 
@@ -103,6 +115,11 @@ Compute nodes must run {op-system-first}.
 ==== {ibm-power-title} notable enhancements
 
 The {ibm-power-name} release on {product-title} {product-version} adds improvements and new capabilities to {product-title} components.
+
+This release introduces support for the following features on {ibm-power-title}:
+
+* Tuning etcd latency tolerances
+* Installer Provisioned Infrastructure for IBM PowerVS - move to CAPI
 
 [discrete]
 [id="ocp-4-17-ibm-z-power-support-matrix_{context}"]
@@ -142,6 +159,10 @@ Starting in {product-title} 4.14, Extended Update Support (EUS) is extended to t
 |Controlling overcommit and managing container density on nodes
 |Unsupported
 |Unsupported
+
+|CPU manager
+|Supported
+|Supported
 
 |Cron jobs
 |Supported
