--- a/architecture/acs-architecture.adoc
+++ b/architecture/acs-architecture.adoc
@@ -23,3 +23,10 @@ include::modules/acs-architecture-external-components.adoc[leveloffset=+1]
 include::modules/acs-architecture-differences-ocp-kube.adoc[leveloffset=+1]
 
 include::modules/acs-architecture-interaction-between-services.adoc[leveloffset=+1]
+
+include::modules/acs-architecture-connections.adoc[leveloffset=+1]
+
+[role="_additional-resources"]
+.Additional resources
+* xref:../installing/installing_ocp/install-central-ocp.html#install-central-operator-external-db_install-central-ocp[Installing Central with an external database using the Operator method]
+* xref:../cli/command-reference/roxctl.adoc#roxctl-command-options_roxctl[roxctl command options]
